[gd_scene load_steps=2 format=3 uid="uid://settings_menu_001"]

[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="1_settings_menu_script"]

[node name="SettingsMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings_menu_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXVolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="MusicVolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ColorblindModeContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ColorblindModeLabel" type="Label" parent="Panel/VBoxContainer/ColorblindModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Colorblind Mode"

[node name="ColorblindModeCheckbox" type="CheckBox" parent="Panel/VBoxContainer/ColorblindModeContainer"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close (ESC)"

[connection signal="value_changed" from="Panel/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/ColorblindModeContainer/ColorblindModeCheckbox" to="." method="_on_colorblind_mode_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
